# xt-expo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  requirements.txt
dl/tv0/: crc_bits.txt  crc_gen_m.txt  crc_interleaver_pattern.txt  enc_bits.txt  enc_gen_m.txt  frozen_bits.txt  info_bit_pattern.txt  info_bits.txt  info_crc_bits.txt  info_intrl_bits.txt  params.txt  rate_matching_pattern.txt  rm_bits.txt  rnti_bits.txt  scrambled_crc_bits.txt
dl/tv1/: crc_bits.txt  crc_gen_m.txt  crc_interleaver_pattern.txt  enc_bits.txt  enc_gen_m.txt  frozen_bits.txt  info_bit_pattern.txt  info_bits.txt  info_crc_bits.txt  info_intrl_bits.txt  params.txt  rate_matching_pattern.txt  rm_bits.txt  rnti_bits.txt  scrambled_crc_bits.txt
dl/tv2/: crc_bits.txt  crc_gen_m.txt  crc_interleaver_pattern.txt  enc_bits.txt  enc_gen_m.txt  frozen_bits.txt  info_bit_pattern.txt  info_bits.txt  info_crc_bits.txt  info_intrl_bits.txt  params.txt  rate_matching_pattern.txt  rm_bits.txt  rnti_bits.txt  scrambled_crc_bits.txt
src/: encdl.cpp  encdl.h  ex1.cpp  ex1.h  util.cpp  util.h
tv0/: channel_interleaver_pattern.txt  crc_polynomial_pattern.txt  enc_bits.txt  info_bit_pattern.txt  info_bits.txt  info_crc_bits.txt  info_frozen_bits.txt  interl_bits.txt  params.txt  polar_sequence.txt  rate_matching_pattern.txt  rm_bits.txt
